# xarcan

./: .gitlab-ci.yml  README.md  configure.ac  meson.build  meson_options.txt
.gitlab-ci/: build-and-test.sh  debian-install.sh
Xext/: bigreq.c  hashtable.c  panoramiX.c  panoramiXprocs.c  saver.c  security.c  shape.c  shm.c  sync.c  xace.c  xace.h  xres.c  xselinux_ext.c  xselinux_hooks.c  xselinux_label.c  xtest.c  xvdisp.c  xvdix.h  xvdix_priv.h  xvmain.c  xvmc.c
Xi/: exevents.c  extinit.c  grabdevb.c  grabdevk.c  listdev.c  xibarriers.c  xichangecursor.c  xichangehierarchy.c  xigrabdev.c  xipassivegrab.c  xiquerydevice.c  xiquerypointer.c
composite/: compalloc.c  compext.c  compinit.c  compositeext_priv.h  compoverlay.c  compwindow.c
config/: config.c  hal.c  wscons.c
damageext/: damageext.c
dbe/: dbe.c  midbe.c
dix/: colormap.c  cursor.c  devices.c  dispatch.c  dix_priv.h  dixfonts.c  dixutils.c  enterleave.c  enterleave.h  eventconvert.c  events.c  extension.c  gc.c  gc_priv.h  gestures.c  getevents.c  globals.c  grabs.c  inpututils.c  main.c  privates.c  property.c  ptrveloc.c  ptrveloc_priv.h  registry.c  registry_priv.h  resource.c  screenint_priv.h  selection.c  touch.c  window.c
doc/: Xserver-spec.xml
dri3/: dri3_request.c  dri3_screen.c
exa/: exa.c  exa_priv.h
fb/: fb.h
glamor/: glamor.c  glamor_composite_glyphs.c  glamor_copy.c  glamor_dash.c  glamor_egl.c  glamor_glx_provider.c  glamor_glyphblt.c  glamor_image.c  glamor_lines.c  glamor_pixmap.c  glamor_points.c  glamor_prepare.c  glamor_priv.h  glamor_program.c  glamor_rects.c  glamor_render.c  glamor_segs.c  glamor_spans.c  glamor_text.c  glamor_transfer.c  glamor_transfer.h  glamor_transform.h  glamor_xv.c  meson.build
glx/: glxcmds.c  glxdri2.c  glxext.c  glxscreens.c  vndcmds.c  vndext.c
hw/: meson.build
hw/kdrive/: Makefile.am  meson.build
hw/kdrive/arcan/: Makefile.am  arcan.c  arcan.h  arcan_cursor.h  arcancvt.c  arcaninit.c  bsd_KbdMap.c  clipboard.c  core.c  cursor.c  init.c  meson.build  miniwm.c  os.c  present.c  proxywnd.c  xa-present.h
hw/kdrive/ephyr/: ephyr.c  ephyr_glamor_xv.c  ephyrinit.c  hostx.c
hw/kdrive/src/: Makefile.am  kcmap.c  kdrive.c  kinput.c  kxv.c
include/: bug.h  busfault.h  cursor.h  cursorstr.h  dix.h  fourcc.h  gc.h  input.h  meson.build  misc.h  opaque.h  os.h  protocol-versions.h  ptrveloc.h  registry.h  resource.h  screenint.h  scrnintstr.h  windowstr.h  xkbfile.h  xkbsrv.h
mi/: Makefile.am  meson.build  mi.h  micmap.c  mieq.c  miline.h  mioverlay.c  mipointer.c  miscrinit.c  mivaltree.c  miwindow.c
os/: WaitFor.c  access.c  auth.c  auth.h  busfault.h  connection.c  io.c  log.c  meson.build  mitauth.h  oscolor.c  osdep.h  osinit.c  ospoll.c  rpcauth.c  rpcauth.h  serverlock.c  serverlock.h  utils.c  (+5 more)
(+192 files in other folders)
